--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@remix-run/node": "^2.14.0",
+    "@remix-run/react": "^2.14.0",
+    "@remix-run/serve": "^2.14.0",
+    "isbot": "^4.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -17,20 +21,26 @@
     "@nx/js": "20.3.2",
     "@nx/playwright": "20.3.2",
     "@nx/react": "20.3.2",
+    "@nx/remix": "20.3.2",
     "@nx/vite": "20.3.2",
     "@nx/web": "20.3.2",
     "@nx/workspace": "20.3.2",
     "@playwright/test": "^1.36.0",
+    "@remix-run/dev": "^2.14.0",
+    "@remix-run/testing": "^2.14.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "15.0.6",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
