--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "private": true,
   "dependencies": {
-    "@remix-run/node": "^2.14.0",
-    "@remix-run/react": "^2.14.0",
-    "@remix-run/serve": "^2.14.0",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
+    "react-router": "^7.0.0",
     "isbot": "^4.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -29,6 +29,7 @@
     "@nx/web": "20.3.2",
     "@nx/workspace": "20.3.2",
     "@playwright/test": "^1.36.0",
+    "@react-router/dev": "^7.0.0",
     "@remix-run/dev": "^2.14.0",
     "@remix-run/testing": "^2.14.0",
     "@swc-node/register": "~1.9.1",
