--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "web-remix",
+  "name": "web",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/web-remix",
+  "sourceRoot": "apps/web",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project web-remix --web",
+  "// targets": "to see all targets run: nx show project web --web",
   "targets": {}
 }
