--- a/package.json
+++ b/package.json
@@ -2,21 +2,30 @@
   "name": "@yoyo-nx-rr7/source",
   "version": "0.0.0",
   "license": "MIT",
+  "nx": {},
   "scripts": {
     "docs": "adr new",
-    "postdocs": "adr-log -i -d doc/adr"
+    "postdocs": "adr-log -i -d doc/adr",
+    "i18n:extract": "lingui extract"
   },
   "private": true,
   "dependencies": {
+    "@lingui/core": "^5.1.2",
+    "@lingui/detect-locale": "^5.1.2",
+    "@lingui/macro": "^5.1.2",
+    "@lingui/react": "^5.1.2",
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.0.0",
-    "react-router": "^7.0.0",
     "isbot": "^4.4.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@lingui/cli": "^5.1.2",
+    "@lingui/conf": "^5.1.2",
+    "@lingui/vite-plugin": "^5.1.2",
     "@nx/devkit": "20.3.2",
     "@nx/eslint": "20.3.2",
     "@nx/eslint-plugin": "20.3.2",
@@ -68,6 +77,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
     "vite": "^5.0.0",
+    "vite-plugin-babel-macros": "^1.0.6",
     "vitest": "^1.3.1"
   }
 }
