feat(app): add i18n

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@lingui/react": "^5.1.2",
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.0.0",
+    "accept-language-parser": "^1.5.0",
+    "intl-parse-accept-language": "^1.0.0",
     "isbot": "^4.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@lingui/cli": "^5.1.2",
     "@lingui/conf": "^5.1.2",
@@ -48,6 +52,7 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "15.0.6",
     "@testing-library/user-event": "^14.5.2",
+    "@types/accept-language-parser": "^1.5.6",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
