--- a/apps/web/tsconfig.spec.json
+++ b/apps/web/tsconfig.spec.json
@@ -24,6 +24,7 @@
     "tests/**/*.spec.js",
     "tests/**/*.test.js",
     "tests/**/*.spec.jsx",
-    "tests/**/*.test.jsx"
+    "tests/**/*.test.jsx",
+    ".react-router/types/**/*"
   ]
 }
