--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.0.0",
     "accept-language-parser": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "intl-parse-accept-language": "^1.0.0",
     "isbot": "^4.4.0",
+    "lucide-react": "^0.473.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router": "^7.0.0"
+    "react-router": "^7.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
