--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@repo/lingui.config": ["./lingui.config"],
-      "@repo/service-i18n": ["libs/service-i18n/src/index.ts"]
+      "@repo/service-i18n": ["libs/service-i18n/src/index.ts"],
+      "@repo/shared-design-system/*": ["libs/shared-design-system/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
