feat(app): added button component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "~/*": ["./libs/shared-design-system/src/lib/*"],
       "@repo/lingui.config": ["./lingui.config"],
       "@repo/service-i18n": ["libs/service-i18n/src/index.ts"],
       "@repo/shared-design-system/*": ["libs/shared-design-system/src/*"]
