--- a/libs/shared-design-system/project.json
+++ b/libs/shared-design-system/project.json
@@ -5,5 +5,13 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project shared-design-system --web",
-  "targets": {}
+  "targets": {
+    "ui:add": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "pnpm dlx shadcn@latest add",
+        "cwd": "libs/shared-design-system"
+      }
+    }
+  }
 }
