--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lingui/detect-locale": "^5.1.2",
     "@lingui/macro": "^5.1.2",
     "@lingui/react": "^5.1.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.0.0",
     "accept-language-parser": "^1.5.0",
