--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "^7.0.0",
+    "rich-domain": "^1.25.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
