--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,10 +15,16 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./libs/shared-design-system/src/lib/*"],
       "@repo/lingui.config": ["./lingui.config"],
       "@repo/service-i18n": ["libs/service-i18n/src/index.ts"],
-      "@repo/shared-design-system/*": ["libs/shared-design-system/src/*"]
+      "@repo/shared-design-system/*": ["libs/shared-design-system/src/*"],
+      "@yoyo-nx-rr7/module-projects-core": [
+        "libs/module-projects-core/src/index.ts"
+      ],
+      "@yoyo-nx-rr7/module-projects-ui": [
+        "libs/module-projects-ui/src/index.ts"
+      ],
+      "~/*": ["./libs/shared-design-system/src/lib/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
