--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rich-domain": "^1.25.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "type-fest": "^4.33.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
