--- a/libs/module-projects-ui/project.json
+++ b/libs/module-projects-ui/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/module-projects-ui/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["scope:ui"],
   "// targets": "to see all targets run: nx show project module-projects-ui --web",
   "targets": {}
 }
