--- a/libs/service-i18n/project.json
+++ b/libs/service-i18n/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/service-i18n/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["scope:service"],
   "// targets": "to see all targets run: nx show project service-i18n --web",
   "targets": {}
 }
